--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:browser": "rollup -c --environment BROWSER",
     "watch": "rollup -c -w",
     "pretest": "npm run build",
-    "test": "mocha",
+    "test": "ava",
     "prepublish": "npm run build:browser && npm test"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "unist-util-select": "^1.5.0"
   },
   "devDependencies": {
+    "ava": "^0.15.2",
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
@@ -46,7 +47,6 @@
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
-    "mocha": "^2.5.3",
     "rollup": "^0.34.0",
     "rollup-plugin-babel": "^2.5.1",
     "rollup-plugin-commonjs": "^3.3.1",
