--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "homepage": "https://github.com/clkao/hackfoldr-util#readme",
   "dependencies": {
+    "csv-parse": "^1.1.5",
     "remark": "^5.0.1",
     "unist-builder": "^1.0.2",
     "unist-util-select": "^1.5.0"
